--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "helmet": "^3.21.3",
     "nodemon": "^2.0.2",
     "socket.io": "^2.3.0"
   }
